<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/recordAudioButton"
        android:text="@string/record_audio"
        android:textColor="@color/purple_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playVideoButton"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/playVideoButton"
        android:text="@string/play_video"
        android:textColor="@color/purple_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recordAudioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recordVideoButton"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/recordVideoButton"
        android:text="@string/record_video"
        android:textColor="@color/purple_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playVideoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</androidx.constraintlayout.widget.ConstraintLayout>